# Real-Time-Story-Script-Generating-Agent-MCP-Server-for-Video-Generation-

./: .env  README.md  app.py  main.py  mcp_server.py  pyproject.toml  requirements.txt
